# mcsrvstats

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  README.md  main.py  mypy.ini  noxfile.py  pyproject.toml  setup.py  test.py
.github/: FUNDING.yml  releasedrafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ISSUE_TEMPLATES/: bug_report.yml
.github/workflows/: codeql-analysis.yml  constraints.txt  coverage.yml  labeler.yml  publish_pypi.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  intro.rst  reference.rst  requirements.txt
mcsrvstats/: __init__.py  main.py
mcsrvstats/exceptions/: __init__.py  exceptions.py
mcsrvstats/models/: __init__.py  blocksmc.py  gommehd.py  hive_achievements.py  hive_game_stats.py  hive_mc_rank.py  hive_status.py  manacube.py  minesaga.py  universocraft.py  veltpvp.py  wyncraft_classes.py
tests/: __init__.py  aiohttp.py  certificate.py  conftest.py  test_exceptions.py  test_gommehd.py  test_hive_mc_achievements.py  test_hive_mc_rank.py  test_hive_mc_status.py  test_manacube.py  test_mcsrvstats.py  test_universocraft.py  test_veltpvp.py  test_wyncraft_classes.py
tests/html/: test_gommehd.html  test_gommehd_player_not_found.html  test_universocraft.html  test_universocraft_maintenance.html  test_universocraft_player_not_found.html  test_veltpvp.html  test_veltpvp_status.html
