[tool.poetry]
authors = ["Darkflame72 <leon@bowie-co.nz>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
description = "An async wrapper for minecraft server stats"
documentation = "https://mcsrvstats.readthedocs.io"
license = "MIT"
name = "mcsrvstats"
readme = "README.md"
repository = "https://github.com/Obsidion-dev/mcsrvstats"
version = "0.2.0"

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
bs4 = "^0.0.1"
importlib_metadata = {version = "^2.0.0", python = "<3.8"}
pydantic = "^1.7.3"
python = "^3.7"

[tool.poetry.dev-dependencies]
Pygments = "^2.7.2"
aioresponses = "^0.7.1"
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.3"}
darglint = "^1.5.8"
flake8 = "^3.8.4"
flake8-annotations = "^2.4.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-rst-docstrings = "^0.0.14"
mypy = "^0.790"
nox = "^2020.8.22"
nox-poetry = "^0.7.0"
pep8-naming = "^0.11.1"
pre-commit = "^2.8.2"
pre-commit-hooks = "^3.3.0"
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
recommonmark = "^0.7.1"
reorder-python-imports = "^2.3.6"
safety = "^1.9.0"
sphinx = "^3.3.1"
sphinx-autobuild = "^2020.9.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-rtd-theme = "^0.5.0"
typeguard = "^2.9.1"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py37', 'py38']

[tool.poetry.scripts]
asyncpixel = "mcsrvstats.client:main"

[tool.coverage.paths]
source = ["mcsrvstats", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mcsrvstats"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry>=1.1.0"]
