[tool.poetry]
authors = ["Darkflame72 <leon@bowie-co.nz>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
description = "An async wrapper for minecraft server stats"
documentation = "https://mcsrvstats.readthedocs.io"
license = "MIT"
name = "mcsrvstats"
readme = "README.md"
repository = "https://github.com/Obsidion-dev/mcsrvstats"
version = "1.0.0"

[tool.poetry.dependencies]
aiohttp = "^3.8.1"
bs4 = "^0.0.1"
importlib_metadata = {version = "^4.10.0", python = "<3.8"}
pydantic = "^1.9.0"
python = "^3.7"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
Pygments = "^2.11.2"
aioresponses = "^0.7.3"
black = "^21.12b0"
coverage = {extras = ["toml"], version = "^6.2"}
darglint = "^1.8.1"
flake8 = "^3.8.4"
flake8-annotations = "^2.7.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-rst-docstrings = "^0.2.5"
mypy = "^0.931"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"
pep8-naming = "^0.11.1"
pre-commit = "^2.16.0"
pre-commit-hooks = "^4.1.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.0"
recommonmark = "^0.7.1"
reorder-python-imports = "^2.3.6"
safety = "^1.9.0"
sphinx = "^4.3.2"
sphinx-autobuild = "^2021.3.14"
sphinx-autodoc-typehints = "^1.15.2"
sphinx-rtd-theme = "^1.0.0"
typeguard = "^2.13.3"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py37', 'py38']

[tool.poetry.scripts]
asyncpixel = "mcsrvstats.client:main"

[tool.coverage.paths]
source = ["mcsrvstats", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mcsrvstats"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry>=1.1.0"]
